--- a/.github/workflows/auth-api-ci.yml
+++ b/.github/workflows/auth-api-ci.yml
@@ -7,26 +7,24 @@ on:
       - '.github/workflows/auth-api-ci.yml'
     branches:
       - 'dev'
+      - 'master'
   push:
     paths:
       - 'auth-api/**'
       - '.github/workflows/auth-api-ci.yml'
     branches:
       - 'dev'
+      - 'master'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Paso 1: Hacer checkout del código
       - name: Checkout code
         uses: actions/checkout@v2
-
-      # Paso 2: Configurar Docker
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Paso 3: Iniciar sesión en Azure Container Registry (ACR)
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
@@ -34,20 +32,25 @@ jobs:
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
-      # Paso 4: Construir la imagen Docker en el directorio 'auth-api'
       - name: Build Docker image
         run: |
           docker build -f auth-api/Dockerfile -t auth-api:$GITHUB_SHA auth-api
 
-      # Paso 5: Si es un merge a `dev`, empuja la imagen a ACR
-      - name: Push Docker image to ACR if merged to dev
-        if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
+      - name: Push Docker image to ACR with random tag
+        if: (github.event_name == 'push' || github.event_name == 'pull_request') && (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/master')
         run: |
           # Tag aleatorio
           RANDOM_TAG=$(openssl rand -hex 6)
           docker tag auth-api:$GITHUB_SHA ${{ secrets.ACR_LOGIN_SERVER }}/auth-api:$RANDOM_TAG
-          docker tag auth-api:$GITHUB_SHA ${{ secrets.ACR_LOGIN_SERVER }}/auth-api:latest
           
           # Push a ACR
           docker push ${{ secrets.ACR_LOGIN_SERVER }}/auth-api:$RANDOM_TAG
+
+      - name: Push Docker image to ACR with latest tag
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: |
+          # Tag aleatorio
+          docker tag auth-api:$GITHUB_SHA ${{ secrets.ACR_LOGIN_SERVER }}/auth-api:latest
+          
+          # Push a ACR
           docker push ${{ secrets.ACR_LOGIN_SERVER }}/auth-api:latest
