--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,4 +32,5 @@ jobs:
           script: |
             cd ~/microservice-app-example/
             git pull origin master
-            sudo docker-compose up -dV
+            sudo docker-compose pull
+            sudo docker-compose up --build -dV
